---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2024-03-25
  Bugfixes:
    - Fixed error when currently adjusted inserter gets removed through some means, for example the cut tool
    - Fixed another error with inserters with 0 length pickup or drop vectors
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2024-02-19
  Bugfixes:
    - Fixed error when pipetting flame thrower turrets with rotated muzzles
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2024-02-17
  Changes:
    - Improved inserter throughput text size for high resolution displays with higher pixel density
    - Added hack to support Remote Configuration
  Bugfixes:
    - Fixed wrong inserter throughput estimate for inserters > 1 stack size when using place and adjust (#1)
    - Fixed white drop highlight being drawn above green drop highlight
    - Fixed error when loading save where an actively-being-adjusted-inserter's prototype was removed
    - Fixed error with inserters with 0 length pickup or drop vectors
    - Fixed error in prototype stage when one of pickup or drop position uses xy and the other uses an array
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2024-02-01
  Bugfixes:
    - Fixed throughput text not changing surface, therefore only being visible on the first surface
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2024-01-30
  Features:
    - Added explicit support for Smart Inserters. If SI is enabled its settings will be used